SERVER-30765 Only allow transaction numbers on mongos or replica set members